--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -7,10 +7,13 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
             integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
             href="https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600;700&family=Poppins:wght@300;400;600;700&display=swap"
-            rel="stylesheet" />
+            rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/lightbox.min.css">
         <link rel="stylesheet" href="css/main.css">
         <title>Portfolio Page</title>
     </head>
@@ -18,6 +21,8 @@
     <body id="home">
         <h1>Portfolio Project</h1>
         <script src="js/bootstrap.bundle.min.js"></script>
+        <script src="js/lightbox-plus-jquery.min.js"></script>
+        <script src="js/script.js"></script>
     </body>
 
 </html>
