--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -19,7 +19,53 @@
     </head>
 
     <body id="home">
-        <h1>Portfolio Project</h1>
+        <header class="header vh-100 text-center position-relative">
+            <div
+                class="text-container position-relative d-flex flex-column justify-content-center align-items-center h-100">
+                <h5 class="text-primary fs-3 fw-bold text-uppercase">
+                    Hello, World
+                </h5>
+                <h1 class="display-1 fw-bold text-white" id="typing-text">
+                    I am Chad Powers
+                </h1>
+                <p class="roles text-white text-upper fs-4">
+                    <span>Full Stack Web Developer | </span>
+                    <span>Trader</span>
+                </p>
+                <a href="#about" class="btn btn-outline-light btn-lg mt-3">
+                    <div class="d-flex">
+                        <div class="me-3">
+                            <i class="fa-solid fa-chevron-down"></i>
+                        </div>
+                        <div class="text-start">
+                            <span>More About Me</span>
+                        </div>
+                    </div>
+                </a>
+                <div class="social d-flex gap-3 position-absolute">
+                    <a href="#">
+                        <i class="fa-brands fa-x-twitter fa-3x text-white"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-instagram fa-3x text-white"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-linkedin fa-3x text-white"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-facebook fa-3x text-white"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-youtube fa-3x text-white"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-github fa-3x text-white"></i>
+                    </a>
+                </div>
+            </div>
+        </header>
+
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/lightbox-plus-jquery.min.js"></script>
         <script src="js/script.js"></script>
