--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -87,6 +87,100 @@
         </section>
         <!-- About -->
 
+        <!-- Profile & Skills -->
+        <section class="profile my-6">
+            <div class="container">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-md-6">
+                        <h3 class="text-uppercase fw-bold">Profile</h3>
+                        <p>Here is some more info about myself to help you get to know me better.</p>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item mb-3">
+                                <h5 class="text-transform">
+                                    <i class="fa-solid fa-user text-primary"></i> Full Name:
+                                </h5>
+                                <p>Chad Powers</p>
+                            </li>
+                            <li class="list-group-item mb-3">
+                                <h5 class="text-transform">
+                                    <i class="fa-solid fa-calendar-alt text-primary"></i> Birth Date:
+                                </h5>
+                                <p>March 13, 1988</p>
+                            </li>
+                            <li class="list-group-item mb-3">
+                                <h5 class="text-transform">
+                                    <i class="fa-solid fa-building text-primary"></i> Current Position:
+                                </h5>
+                                <p>Full Stack Dev</p>
+                            </li>
+                            <li class="list-group-item mb-3">
+                                <h5 class="text-transform">
+                                    <i class="fa-solid fa-home text-primary"></i> Website:
+                                </h5>
+                                <p>cpowers.com</p>
+                            </li>
+                            <li class="list-group-item mb-3">
+                                <h5 class="text-transform">
+                                    <i class="fa-solid fa-envelope text-primary"></i> Email:
+                                </h5>
+                                <p>cpowers.com</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-md-6">
+                        <h3 class="text-uppercase fw-bold">Skills</h3>
+                        <p>Here is a list of my skills with these dumb percentages that don't mean anything 😉</p>
+                        <h5><i class="fa-solid fa-check"></i> HTML 5</h5>
+                        <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                            aria-valuemax="100">
+                            <div class="progress-bar" style="width: 100%;">100%</div>
+                        </div>
+                        <h5><i class="fa-solid fa-check"></i> CSS</h5>
+                        <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                            aria-valuemax="100">
+                            <div class="progress-bar" style="width: 90%;">90%</div>
+                        </div>
+                        <h5><i class="fa-solid fa-check"></i> JavaScript</h5>
+                        <div class="progress mb-4" role="progressbar" aria-valuenow="90" aria-valuemin="0"
+                            aria-valuemax="100">
+                            <div class="progress-bar" style="width: 90%;">90%</div>
+                        </div>
+                        <h5><i class="fa-solid fa-check"></i> Bootstrap5</h5>
+                        <div class="progress mb-4" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+                            aria-valuemax="100">
+                            <div class="progress-bar" style="width: 100%;">100%</div>
+                        </div>
+                        <h5><i class="fa-solid fa-check"></i> PHP</h5>
+                        <div class="progress mb-4" role="progressbar" aria-valuenow="75" aria-valuemin="0"
+                            aria-valuemax="100">
+                            <div class="progress-bar" style="width: 75%;">75%</div>
+                        </div>
+                        <h5><i class="fa-solid fa-check"></i> Python</h5>
+                        <div class="progress mb-4" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                            aria-valuemax="100">
+                            <div class="progress-bar" style="width: 70%;">70%</div>
+                        </div>
+                        <h5><i class="fa-solid fa-check"></i> UX/UI</h5>
+                        <div class="progress mb-4" role="progressbar" aria-valuenow="70" aria-valuemin="0"
+                            aria-valuemax="100">
+                            <div class="progress-bar" style="width: 70%;">70%</div>
+                        </div>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+                <div class="row mt-5 text-center">
+                    <div class="col-12">
+                        <a href="#" class="btn btn-outline-dark btn-lg text-uppercase px-5 mx-3 my-2">Hire Me Now</a>
+                        <a href="#" class="btn btn-dark btn-lg text-uppercase px-5 mx-3 my-2">Download CV</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Profile & Skills -->
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/lightbox-plus-jquery.min.js"></script>
         <script src="js/script.js"></script>
