--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -320,6 +320,60 @@
         </section>
         <!-- Services -->
 
+        <!-- Stats -->
+        <section class="stats py-5 text-bg-secondary">
+            <div class="container">
+                <div class="row g-0">
+                    <div class="col-md-4 col-lg-2">
+                        <div class="stat text-center border-end border-dark">
+                            <i class="fa-solid fa-user fa-3x mb-3"></i>
+                            <p class="fs-1">500+</p>
+                            <h3 class="fs-6 text-uppercase">Clients</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-lg-2">
+                        <div class="stat text-center border-end border-dark">
+                            <i class="fa-solid fa-project-diagram fa-3x mb-3"></i>
+                            <p class="fs-1">700+</p>
+                            <h3 class="fs-6 text-uppercase">Projects</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-lg-2">
+                        <div class="stat text-center border-end border-dark">
+                            <i class="fa-solid fa-clock fa-3x mb-3"></i>
+                            <p class="fs-1">16+</p>
+                            <h3 class="fs-6 text-uppercase">Years</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-lg-2">
+                        <div class="stat text-center border-end border-dark">
+                            <i class="fa-solid fa-book fa-3x mb-3"></i>
+                            <p class="fs-1">25</p>
+                            <h3 class="fs-6 text-uppercase">Publications</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-lg-2">
+                        <div class="stat text-center border-end border-dark">
+                            <i class="fa-brands fa-youtube fa-3x mb-3"></i>
+                            <p class="fs-1">2.06M</p>
+                            <h3 class="fs-6 text-uppercase">Subscribers</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-lg-2 last">
+                        <div class="stat text-center border-end border-dark">
+                            <i class="fa-solid fa-graduation-cap fa-3x mb-3"></i>
+                            <p class="fs-1">1M+</p>
+                            <h3 class="fs-6 text-uppercase">Subscribers</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Stats -->
+
+
+
+
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/lightbox-plus-jquery.min.js"></script>
         <script src="js/script.js"></script>
