--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="text-center">
                     <h4 class="text-uppercase fw-bold text-primary">About Me</h4>
-                    <hr class="w-25 mx-auto">
+                    <hr class="w-25 mx-auto" />
                     <h2 class="mb-4">Let me introduce myself...</h2>
                 </div>
                 <div class="about-content d-flex gap-5 align-items-center h-100">
@@ -189,7 +189,7 @@
                     <h4 class="text-uppercase fw-bold text-primary">
                         Portfolio
                     </h4>
-                    <hr class="w-25 mx-auto">
+                    <hr class="w-25 mx-auto" />
                     <h2 class="mb-4">Check Out My Work</h2>
                     <p class="lead">
                         Here is a small sample of my projects.
@@ -261,7 +261,7 @@
                 <div class="row">
                     <div class="col-12">
                         <h2>Shoutout to StyleShout</h2>
-                        <hr class="w-25 mx-auto">
+                        <hr class="w-25 mx-auto" />
                         <p class="lead mb-5">Styleshout is a place for Free HTML5 Templates and Free Wordpress. This
                             design
                             was inspired by one of their templates. Check them out for templates to use and get
@@ -279,7 +279,7 @@
             <div class="container position-relative">
                 <div class="text-center mb-5">
                     <h4 class="text-uppercase fw-bold text-primary">Services</h4>
-                    <hr class="w-25 mx-auto">
+                    <hr class="w-25 mx-auto" />
                     <h2 class="mb-4">What Can I Do For You?</h2>
                     <p class="lead">Here are some of the services that I offer when it comes to web development and
                         business.</p>
@@ -289,7 +289,7 @@
                     <div class="col-md-4 text-center">
                         <i class="fa-solid fa-globe fa-3x text-primary mb-3"></i>
                         <h3 class="fs-3">Web Design</h3>
-                        <hr class="w-25 mx-auto">
+                        <hr class="w-25 mx-auto" />
                         <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis laborum
                             sint unde quos ad, assumenda alias minus ex mollitia impedit?
                         </p>
@@ -299,7 +299,7 @@
                     <div class="col-md-4 text-center">
                         <i class="fa-solid fa-globe fa-3x text-primary mb-3"></i>
                         <h3 class="fs-3">Web Development</h3>
-                        <hr class="w-25 mx-auto">
+                        <hr class="w-25 mx-auto" />
                         <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis laborum
                             sint unde quos ad, assumenda alias minus ex mollitia impedit?
                         </p>
@@ -309,7 +309,7 @@
                     <div class="col-md-4 text-center">
                         <i class="fa-solid fa-globe fa-3x text-primary mb-3"></i>
                         <h3 class="fs-3">Advetising & SEO</h3>
-                        <hr class="w-25 mx-auto">
+                        <hr class="w-25 mx-auto" />
                         <p class="fs-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis laborum
                             sint unde quos ad, assumenda alias minus ex mollitia impedit?
                         </p>
@@ -371,7 +371,47 @@
         </section>
         <!-- Stats -->
 
-
+        <!-- Contact -->
+        <section class="contact text-bg-dark bg-gradient py-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 offset-md-2">
+                        <div class="text-center mb-5">
+                            <h4 class="text-uppercase fw-bold tex-primary">Contact</h4>
+                            <hr class="w-25 mx-auto" />
+                            <h2 class="mb-4">I'd love to hear from you.</h2>
+                            <p class="lead">
+                                If you have any questions or would like to work together, please contact me with the
+                                form below.
+                            </p>
+                        </div>
+                        <!-- Form -->
+                        <form>
+                            <div class="mb-5">
+                                <input type="text"
+                                    class="form-control bg-transparent border-top-0 border-start-0 border-end-0 rounded-0 border-muted text-white"
+                                    placeholder="Name">
+                            </div>
+                            <div class="mb-5">
+                                <input type="email"
+                                    class="form-control bg-transparent border-top-0 border-start-0 border-end-0 rounded-0 border-muted text-white"
+                                    placeholder="Email">
+                            </div>
+                            <div class="mb-5">
+                                <textarea
+                                    class="form-control bg-transparent border-top-0 border-start-0 border-end-0 rounded-0 border-muted text-white"
+                                    placeholder="Message" style="resize: none;"></textarea>
+                            </div>
+                            <div class="mb-5 d-grid">
+                                <button class="btn btn-primary" type="submit">Submit</button>
+                            </div>
+                        </form>
+                        <!-- Form -->
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Contact -->
 
 
         <script src="js/bootstrap.bundle.min.js"></script>
