--- a/portfolio-website/index.html
+++ b/portfolio-website/index.html
@@ -409,6 +409,33 @@
                         <!-- Form -->
                     </div>
                 </div>
+                <!-- Footer -->
+                <div class="footer d-flex mt-5">
+                    <p class="flex-grow-1">
+                        Copyright &copy; 2023 | Design By StyleShout
+                    </p>
+                    <div class="h-stack gap-5">
+                        <a href="#">
+                            <i class="fa-brands fa-x-twitter fa-2x text-white"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-instagram fa-2x text-white"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-linkedin fa-2x text-white"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-facebook fa-2x text-white"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-youtube fa-2x text-white"></i>
+                        </a>
+                        <a href="#">
+                            <i class="fa-brands fa-github fa-2x text-white"></i>
+                        </a>
+                    </div>
+                </div>
+                <!-- Footer -->
             </div>
         </section>
         <!-- Contact -->
