--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -13,6 +13,7 @@
             rel="stylesheet">
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/styles.css">
         <title>Bootstrap Boilerplate</title>
     </head>
 
@@ -46,7 +47,7 @@
                             <a href="#projects" class="nav-link">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#contact" class="btn btn-outline-secondary px-4 mx-4">Contact
+                            <a href="#contact" class="btn btn-outline-secondary px-4 mx-4 nav-link">Contact
                                 Us</a>
                         </li>
                     </ul>
@@ -54,6 +55,40 @@
             </div>
         </nav>
         <!-- Navbar -->
+
+        <!-- Header -->
+        <header class="header position-relative mt-6 overflow-hidden">
+            <img src="images/decoration-star.svg" alt="" class="decoration-star position-absolute" />
+            <img src="images/decoration-star.svg" alt="" class="decoration-star-2 position-absolute" />
+            <div class="container position-relative z-3">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-lg-6">
+                        <div class="mt-6">
+                            <h1 class="xl-text">
+                                The <span class="text-primary">Perfect</span> Office Space
+                            </h1>
+                            <p class="lead mb-4">
+                                We specialize in transforming office spaces into inspiring and functional environments.
+                                Let
+                                us bring your vision to life.
+                            </p>
+                            <a href="#introduction" class="btn btn-primary btn-lg m-2">More Details</a>
+                            <a href="#contact" class="btn btn-outline-secondary btn-lg m-2">Contact Us</a>
+                        </div>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-lg-6">
+                        <div class="image-container">
+                            <img src="images/header.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </header>
+        <!-- Header -->
 
         <script src="js/bootstrap.bundle.min.js"></script>
     </body>
