--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -172,8 +172,6 @@
                 </div>
                 <!-- Right Column -->
             </div>
-            </div>
-            </header>
         </section>
         <!-- Details 1 -->
 
@@ -227,6 +225,39 @@
             </div>
         </section>
         <!-- Services -->
+
+
+        <!-- Details 2 -->
+        <section class="details-2 position-relative my-6 overflow-hidden" id="details">
+            <img src="images/decoration-star.svg" alt="" class="decoration-star position-absolute" />
+            <div class="container position-relative z-3">
+                <div class="row">
+                    <!-- Left Column -->
+                    <div class="col-lg-6">
+                        <div class="text-container text-center text-lg-start mb-4">
+                            <h2 class="mb-4">Transform Your Workspace For Enhanced <span
+                                    class="text-primary">Productivity</span></h2>
+                            <p>A thoughtfully designed and well-organized office space has a profound impact on
+                                productivity and employee satisfaction. It sets the stage for seamless collaboration,
+                                efficient workflows, and creative inspiration. At our company, we specialize in creating
+                                tailored office environments that maximize productivity and elevate the overall work
+                                experience.</p>
+                            <a href="article.html" class="btn btn-primary">Get Started</a>
+                        </div>
+                    </div>
+                    <!-- Left Column -->
+                    <!-- Right Column -->
+                    <div class="col-lg-6">
+                        <div class="image-container d-flex justify-content-center">
+                            <img src="images/details-2.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <!-- Right Column -->
+                </div>
+            </div>
+        </section>
+        <!-- Details 2 -->
+
 
         <script src="js/bootstrap.bundle.min.js"></script>
         <script src="js/script.js"></script>
