--- a/yavin-office-design/index.html
+++ b/yavin-office-design/index.html
@@ -265,7 +265,7 @@
                     <div class="col-lg-8 offset-lg-2">
                         <h4 class="lh-base">Our team of highly skilled designers and interior construction workers can
                             deliver above
-                            your level of expections</h4>
+                            your level of expectations.</h4>
                         <a href="#contact" class="btn btn-secondary btn-md">Get Quote</a>
                     </div>
                 </div>
